<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="86dp"
            android:layout_height="41dp"
            android:layout_margin="20sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNamw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_username"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/EmidTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/emp_id"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNamw" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmpId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_emp_id"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmidTv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addressTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/emp_address"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/etEmpId"
            app:layout_constraintTop_toBottomOf="@+id/etEmpId" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAddress"
            android:layout_width="385dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_emp_address"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressTv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvExp"
            android:layout_width="71dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:text="@string/emp_Exp"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/etAddress"
            app:layout_constraintTop_toBottomOf="@+id/etAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etExp"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_emp_Exp"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDepart"
            android:layout_width="71dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/emp_Dep"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etExp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDepart"
            android:layout_width="388dp"
            android:layout_height="51dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_emp_Departent"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDepart" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/bte_Save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDepart" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/btn_View"
            app:layout_constraintStart_toEndOf="@+id/btnSave"
            app:layout_constraintTop_toBottomOf="@+id/etDepart" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>